--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<div class="text-center section mb-3">
+<div class="main text-center section mb-3">
   <img
     src="images/404_page_not_found.svg"
     class="mb-2 mh-50 w-75"
