--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section class="section">
+<section class="main section">
   <div class="container">
     <h1 class="h2 text-black text-center text-sm-left pb-5 pt-0">
       Work Portfolio
