--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -32,8 +32,8 @@
   &:hover,
   &.focus,
   &.active {
-    background: $primary-color !important;
-    border-color: $primary-color !important;
+    background: darken($primary-color, 15%) !important;
+    border-color: darken($primary-color, 15%) !important;
   }
 }
 
