--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,5 +1,11 @@
+html, body {
+  height: 100%;
+}
+
 body {
   background-color: $body-color;
+  display: flex;
+  flex-direction: column;
   overflow-x: hidden;
 }
 
@@ -169,6 +175,15 @@ a.text-primary:hover {
 
 .shadow {
   box-shadow: 0 10px 30px 0 rgba(68,74,102,.1) !important;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.center {
+  transform: translateX(-50%);
+  left: 50%;
 }
 
 .form-control{
