--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -2,7 +2,7 @@
   transition: .3s ease;
   &.fixed-top{
     @include desktop {
-      position: sticky !important;
+      position: fixed !important;
     }
   }
   @include desktop {
