--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section class="section">
+<section class="main section">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto block shadow mb-5">
