--- a/layouts/partials/socialMedia.html
+++ b/layouts/partials/socialMedia.html
@@ -1,6 +1,6 @@
 <ul class="list-inline social-icon">
     {{ range .Site.Params.social }}
-    <li class="list-inline-item px-2 mx-0">
+    <li class="list-inline-item px-1 px-sm-2 mx-0">
       <a href="{{ .link | safeURL }}" aria-label="{{ .name }}" alt="{{ .name }}"
         target="_blank" rel="noopener noreferrer">
         <i class="{{ .icon }}"></i>
