--- a/layouts/search/list.html
+++ b/layouts/search/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section class="section">
+<section class="main section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
