fix: Contact image alignment
Problem:
Contact image is not bottom aligned with the form on desktop sizes.

Solution:
Added responsive padding and margin classes.

--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -54,7 +54,7 @@
           </div>
         </form>
       </div>
-      <div class="col-lg-6 text-md-right">
+      <div class="col-lg-6 text-md-right pt-0 pt-lg-5 mt-lg-4 mt-0">
         <img class="img-fluid" src="{{ .Params.Image | relURL }}" alt="" />
       </div>
     </div>
