--- a/layouts/partials/skills.html
+++ b/layouts/partials/skills.html
@@ -5,7 +5,7 @@
 
 	<div class="container">
 		<h3>Skills</h3>
-		<div class="shadow rounded mt-5 p-4">
+		<div class="w-100 shadow rounded mt-5 p-4 center position-relative">
 			<div class="skills__header text-left">
 				<h4>
 					Design
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 
-		<div class="shadow rounded mt-5 p-4">
+		<div class="w-100 shadow rounded mt-5 p-4 center position-relative">
 			<div class="skills__header text-left">
 				<h4>Front End</h4>
 				<p>Here's some of the front end technologies that I work with:</p>
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 
-		<div class="shadow rounded mt-5 p-4">
+		<div class="w-100 shadow rounded mt-5 p-4 center position-relative">
 			<div class="skills__header text-left">
 				<h4>Back End</h4>
 				<p>Skilled in the following languages and frameworks:</p>
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 
-		<div class="shadow rounded mt-5 p-4">
+		<div class="w-100 shadow rounded mt-5 p-4 center position-relative">
 			<div class="skills__header text-left">
 				<h4>Tools</h4>
 				<p>Other tools that I use to develop, test and deploy projects:</p>
