fix: Alignment issues with about page

--- a/layouts/partials/skills.html
+++ b/layouts/partials/skills.html
@@ -3,8 +3,8 @@
 <section id="skills" class="section py-0 mt-0 pb-3">
 	<p id="design"></p>
 
-	<div class="container">
-		<h3>Skills</h3>
+	<div>
+		<h3 class="ml-3 ml-sm-0">Skills</h3>
 		<div class="w-100 shadow rounded mt-5 p-4 center position-relative">
 			<div class="skills__header text-left">
 				<h4>
