--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -2,10 +2,10 @@
 
 <section class="main section">
   <div class="container">
-    <h1 class="h2 text-black text-center text-sm-left pb-5 pt-0">
+    <h1 class="h2 text-black text-center text-sm-left pl-2 pb-5 pt-0">
       {{ .Title | markdownify }}
     </h1>
-    <div class="row">
+    <div class="row px-4">
       <div class="card border-0 shadow rounded mx-auto mb-5 p-3">
         <div class="row no-gutters">
           <div class="col-md-4 text-center">
