fix(home): headings in sequential-decending order
Problem:
Heading tags do not decend into in a sequential order (1, 2, 3).

Solution:
Changed tags to have the correct heading level and added a relevant
class for styling.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,9 +17,9 @@
           <h1 class="banner-title">
             {{ .Site.Params.banner.title | markdownify }}
           </h1>
-          <h4 class="banner-subtitle">
+          <h2 class="h4 banner-subtitle">
             {{ .Site.Params.banner.subTitle | markdownify }}
-          </h4>
+          </h2>
 
           <div class="illustration-mobile col-lg-6 text-center mx-auto w-75 mw-75 py-5">
             <img
@@ -63,7 +63,7 @@
             alt="Card image cap"
           />
           <div class="card-body">
-            <h5 class="card-title">Design</h5>
+            <h3 class="h5 card-title">Design</h3>
             <p class="card-text">
               I create user interfaces and experiences for the web and mobile
               applications.
@@ -83,7 +83,7 @@
             alt="Card image cap"
           />
           <div class="card-body">
-            <h5 class="card-title">Front End</h5>
+            <h3 class="h5 card-title">Front End</h3>
             <p class="card-text">
               I develop web designs into fast, responsive websites and web apps.
             </p>
@@ -102,7 +102,7 @@
             alt="Card image cap"
           />
           <div class="card-body">
-            <h5 class="card-title">Back End</h5>
+            <h3 class="h5 card-title">Back End</h3>
             <p class="card-text">
               I build backend systems that easily integrate into front end
               projects.
