--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-lg-8 mx-auto px-0">
         {{ if eq .Title "Blog" }}
-          <h2 class="text-center text-sm-left mb-4">Blog</h2>
+          <h1 class="h2 text-center text-sm-left mb-4">Blog</h1>
         {{ else }}
           <h2 class="mb-4">Posts are showing from
             <span class="text-primary">{{ .Title }}</span> categories
