feat: add OpenGraph microdata
Add OpenGraph microdata for displaying any of the website's links on
social media.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,6 +18,8 @@
 
   {{ hugo.Generator }}
 
+  {{ template "_internal/opengraph.html" . }}
+
   {{ "<!-- Plugins -->" | safeHTML }}
   {{ range .Site.Params.plugins.css }}
     <link rel="stylesheet" href="{{ .URL | absURL }} ">
