feat: add Hotjar
Add Hotjar for tracking users to understand how they use my website.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -59,4 +59,6 @@
     name="msapplication-config"
     content="{{ `static/browserconfig.xml` | absURL }}"
   />
+
+  {{- partial "hotjar.html" . -}}
 </head>
