style: beautify the Sass code
Use prettier to improve the readability and correct the formatting of Sass style files.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,16 +9,16 @@ VERSION:	1.0
 [TABLE OF CONTENTS]
 -------------------------------------------------------------------*/
 
-@import 'variables';
+@import "variables";
 
-@import 'mixins';
+@import "mixins";
 
-@import 'typography';
+@import "typography";
 
-@import 'buttons';
+@import "buttons";
 
-@import 'common';
+@import "common";
 
-@import 'templates/_navigation.scss';
+@import "templates/_navigation.scss";
 
-@import 'templates/_main.scss';
+@import "templates/_main.scss";
