--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -8,7 +8,7 @@
   border: 1px solid;
   position: relative;
   z-index: 1;
-  transition: .2s ease;
+  transition: 0.2s ease;
 
   &:hover,
   &:active,
@@ -18,7 +18,7 @@
   }
 }
 
-.btn-sm{
+.btn-sm {
   font-size: 15px;
   padding: 6px 10px;
 }
@@ -51,7 +51,6 @@
     color: $white;
   }
 }
-
 
 .btn-transparent {
   background: transparent;
