--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -42,7 +43,7 @@ a,
 button,
 select {
   cursor: pointer;
-  transition: .2s ease;
+  transition: 0.2s ease;
 
   &:focus {
     outline: 0;
@@ -79,13 +80,13 @@ select {
 
   &::before {
     position: absolute;
-    content: '';
+    content: "";
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
     background: $black;
-    opacity: .5;
+    opacity: 0.5;
   }
 }
 
@@ -105,7 +106,7 @@ select {
   background: $secondary-color !important;
 }
 
-.bg-light{
+.bg-light {
   background: $light !important;
 }
 
@@ -174,7 +175,7 @@ a.text-primary:hover {
 }
 
 .shadow {
-  box-shadow: 0 10px 30px 0 rgba(68,74,102,.1) !important;
+  box-shadow: 0 10px 30px 0 rgba(68, 74, 102, 0.1) !important;
 }
 
 .bottom {
@@ -186,21 +187,21 @@ a.text-primary:hover {
   left: 50%;
 }
 
-.form-control{
+.form-control {
   height: 50px;
   line-height: 50px;
-  &:focus{
+  &:focus {
     outline: 0;
     box-shadow: none;
     border-color: $primary-color;
   }
 }
 
-textarea.form-control{
+textarea.form-control {
   height: 150px;
 }
 
-.page-link:focus{
+.page-link:focus {
   box-shadow: none;
 }
 
