--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,95 +1,93 @@
 {{ "<!-- navigation -->" | safeHTML }}
 <header class="fixed-top navigation">
-  <div class="container">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-      <a class="navbar-brand" href="{{ .Site.BaseURL }}">
-        <img
-          class="logo img-fluid"
-          src="{{ .Site.Params.logo | relURL }}"
-          alt="{{ .Site.Title }}"
-        />
-      </a>
-      <button
-        class="navbar-toggler border-0"
-        aria-label="Toggle Navigation"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navigation"
-      >
-        <i class="ti-menu h3"></i>
-      </button>
+  <!-- Navbar -->
+  <nav
+    class="navbar container navbar-expand-lg navbar-light bg-transparent px-4"
+  >
+    <a class="navbar-brand" href="{{ .Site.BaseURL }}">
+      <img
+        class="logo img-fluid"
+        src="{{ .Site.Params.logo | relURL }}"
+        alt="{{ .Site.Title }}"
+      />
+    </a>
+    <button
+      class="navbar-toggler border-0 px-0"
+      aria-label="Toggle Navigation"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navigation"
+    >
+      <i class="ti-menu h3"></i>
+    </button>
 
-      <div class="collapse navbar-collapse text-center" id="navigation">
-        {{ $currentPage := .URL }}
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+    <div class="collapse navbar-collapse text-center" id="navigation">
+      {{ $currentPage := .URL }}
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a
+            class='nav-link mt-2 py-2 px-4 {{ if eq .URL "/" }}text-primary nav-home-link{{ end }}'
+            href="{{ .Site.BaseURL }}"
+          >
+            {{ with .Site.Params.Home }} {{ . }} {{ end }}
+          </a>
+        </li>
+        {{ range .Site.Menus.main }} {{ if .HasChildren }}
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            {{ .Name }}
+          </a>
+          <div class="dropdown-menu">
+            {{ range .Children }}
             <a
-              class='nav-link mt-2 py-2 px-4 {{ if eq .URL "/" }}text-primary nav-home-link{{ end }}'
-              href="{{ .Site.BaseURL }}"
+              class='dropdown-item {{ if eq .URL (trim $currentPage "/") }}bg-primary rounded text-white{{ end }}'
+              href="{{ .URL | absURL }}"
             >
-              {{ with .Site.Params.Home }} {{ . }} {{ end }}
+              {{ .Name }}
             </a>
-          </li>
-          {{ range .Site.Menus.main }}
-            {{ if .HasChildren }}
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                {{ .Name }}
-              </a>
-              <div class="dropdown-menu">
-                {{ range .Children }}
-                <a
-                  class='dropdown-item {{ if eq .URL (trim $currentPage "/") }}bg-primary rounded text-white{{ end }}'
-                  href="{{ .URL | absURL }}"
-                >
-                  {{ .Name }}
-                </a>
-                {{ end }}
-              </div>
-            </li>
-            {{ else }}
-            <li class="nav-item">
-              <a
-                class='nav-link mt-2 py-2 px-4 {{ if eq .URL (trim $currentPage "/") }}bg-primary rounded text-white{{ end }}'
-                href="{{ .URL | absURL }}"
-              >
-                {{ .Name }}
-              </a>
-            </li>
             {{ end }}
-          {{ end }}
-        </ul>
-        {{ if .Site.Params.search.enable }} {{ "<!-- Search -->" | safeHTML }}
-        <div class="search">
-          <button id="searchOpen" class="search-btn">
-            <i class="ti-search"></i>
-          </button>
-          <div class="search-wrapper">
-            <form action="{{ .Site.BaseURL }}/search" class="h-100">
-              <input
-                class="search-box px-4"
-                id="search-query"
-                name="s"
-                type="search"
-                placeholder="Type & Hit Enter..."
-              />
-            </form>
-            <button id="searchClose" class="search-close">
-              <i class="ti-close text-dark"></i>
-            </button>
           </div>
+        </li>
+        {{ else }}
+        <li class="nav-item">
+          <a
+            class='nav-link mt-2 py-2 px-4 {{ if eq .URL (trim $currentPage "/") }}bg-primary rounded text-white{{ end }}'
+            href="{{ .URL | absURL }}"
+          >
+            {{ .Name }}
+          </a>
+        </li>
+        {{ end }} {{ end }}
+      </ul>
+      {{ if .Site.Params.search.enable }} {{ "<!-- Search -->" | safeHTML }}
+      <div class="search">
+        <button id="searchOpen" class="search-btn">
+          <i class="ti-search"></i>
+        </button>
+        <div class="search-wrapper">
+          <form action="{{ .Site.BaseURL }}/search" class="h-100">
+            <input
+              class="search-box px-4"
+              id="search-query"
+              name="s"
+              type="search"
+              placeholder="Type & Hit Enter..."
+            />
+          </form>
+          <button id="searchClose" class="search-close">
+            <i class="ti-close text-dark"></i>
+          </button>
         </div>
-        {{ end }}
       </div>
-    </nav>
-  </div>
+      {{ end }}
+    </div>
+  </nav>
 </header>
 {{ "<!-- /navigation -->" | safeHTML }}
