--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,19 +1,18 @@
 {{ define "main" }}
 
-<div class="main">
+<main>
   <!-- banner -->
-  <section
-    class="banner bg-cover"
-    style="background-image: url('{{ .Site.Params.banner.bgImage | relURL }}');"
-  >
-    <img
-      src="{{ .Site.Params.banner.image | relURL }}"
-      class="img-fluid illustration w-75 h-75"
-      alt="{{ .Site.Params.banner.title }}"
-    />
-    <div class="container">
+  <section class="banner bg-cover">
+    <div class="container position-relative">
       <div class="row">
-        <div class="banner-text-container col-lg-6 mb-5 mb-lg-0 mt-5 mt-lg-0">
+        <img
+          src="{{ .Site.Params.banner.image | relURL }}"
+          class="img-fluid illustration"
+          alt="{{ .Site.Params.banner.title }}"
+        />
+        <div
+          class="banner-text-container col-lg-6 mb-5 mb-lg-0 mt-5 mt-lg-0 px-0"
+        >
           <h1 class="banner-title">
             {{ .Site.Params.banner.title | markdownify }}
           </h1>
@@ -21,7 +20,9 @@
             {{ .Site.Params.banner.subTitle | markdownify }}
           </h2>
 
-          <div class="illustration-mobile col-lg-6 text-center mx-auto w-75 mw-75 py-5">
+          <div
+            class="illustration-mobile col-lg-6 text-center mx-auto w-75 mw-75 py-5"
+          >
             <img
               src="{{ .Site.Params.banner.image | relURL }}"
               class="img-fluid"
@@ -29,21 +30,17 @@
             />
           </div>
 
-          <ul class="list-inline social-icon mb-0 pt-3">
-            {{ range .Site.Params.social }}
-            <li class="list-inline-item">
-              <a
-                href="{{ .link | safeURL }}"
-                aria-label="{{ .name }}"
-                alt="{{ .name }}"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <i class="{{ .icon }}"></i>
-              </a>
-            </li>
-            {{ end }}
-          </ul>
+          <div class="banner-cta mx-0 mx-sm-4 mt-3">
+            <a
+              href="/Joshua%20Booth%20Resume.pdf"
+              class="btn btn-outline-primary mr-3"
+              alt="Joshua Booth Resume"
+              target="_blank"
+            >
+              View Resume
+            </a>
+            <a href="/contact" class="btn btn-primary ml-3"> Contact Me </a>
+          </div>
         </div>
       </div>
     </div>
@@ -154,6 +151,6 @@
   <!-- /cta -->
 
   {{ partial "personData.html" }}
-</div>
+</main>
 
 {{ end }}
