--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -223,3 +223,29 @@ textarea.form-control {
     transform: translateX(10px) rotate(-45deg);
   }
 }
+
+// credit: https://github.com/nickhericks/hand-wave-animation
+.wave {
+  animation-name: wave-animation;
+  animation-duration: 0.9s; /* Wave speed */
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-play-state: running;
+  transform-origin: 70% 70%; /* Pivot from bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(-10deg);
+  }
+  75% {
+    transform: rotate(12deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
