--- a/layouts/index.html
+++ b/layouts/index.html
@@ -103,13 +103,67 @@
   </section>
   <!-- /Skills -->
 
+  <hr />
+
+  <!-- Portfolio -->
+  <section class="container section">
+    <h2 class="text-center mb-5">Portfolio</h2>
+
+    {{ range .Site.Params.portfolio_highlight }}
+    <div
+      class="row align-items-center h-100 text-center text-lg-left pt-5 mb-5"
+    >
+      <div class="col-lg-6 p-lg-0">
+        {{ if .website }}
+        <a href="{{ .website }}" target="_blank">
+          {{ end }}
+          <img class="img-fluid" src="{{ .image | relURL }}" />
+          {{ if .website }}
+        </a>
+        {{ end }}
+      </div>
+      <div class="col-lg-5 mx-auto py-3">
+        <h3 class="h3">
+          {{ .name }} {{ if .tag }}
+          <span class="badge badge-pill badge-primary badge-sm align-middle">
+            {{ .tag }}
+          </span>
+          {{ end }}
+        </h3>
+        <p class="mb-5 color-gray">{{ .description }}</p>
+
+        {{ if .website }}
+        <a
+          href="{{ .website }}"
+          class="btn btn-outline-primary mt-4 mr-2"
+          target="_blank"
+        >
+          Visit site
+        </a>
+        {{ end }} {{ if .project }}
+        <a href="{{ .project }}" class="btn btn-primary mt-4 ml-2 ml-lg-1">
+          Learn More
+        </a>
+        {{ end }}
+      </div>
+    </div>
+    {{ end }}
+
+    <div class="text-center mt-5 pt-5">
+      <a href="/work" class="btn btn-outline-primary">See more</a>
+    </div>
+  </section>
+  <!-- /Portfolio -->
+
   <!-- cta -->
   {{ if .Site.Params.cta.enable }}
+  <hr />
+
   <section class="section pt-3 mt-4">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto pt-3">
-          <div class="row shadow bg-white p-5">
+          <div class="row bg-white p-5">
             <div class="col-md-4 text-center text-md-left mb-4 mb-lg-0">
               <img
                 src="{{ .Site.Params.cta.image | relURL }}"
@@ -121,12 +175,12 @@
               <h3 class="mt-0">{{ .Site.Params.cta.title | markdownify }}</h3>
               <p>{{ .Site.Params.cta.description | markdownify }}</p>
               {{ if .Site.Params.cta.button.enable }}
-                <a
-                  href="{{ .Site.Params.cta.button.link | absURL }}"
-                  class="btn btn-primary"
-                >
-                  {{ .Site.Params.cta.button.label }}
-                </a>
+              <a
+                href="{{ .Site.Params.cta.button.link | absURL }}"
+                class="btn btn-primary"
+              >
+                {{ .Site.Params.cta.button.label }}
+              </a>
               {{ end }}
             </div>
           </div>
