feat: remove search

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,7 +8,7 @@
   />
   <h2>Page Not Found!</h2>
   <p class="col-10 text-center mx-auto">
-    This page was not found, you can go back or search for the page.
+    This page was not found, you can go back and search for the page.
   </p>
 </div>
 
