feat: loader only on landing page

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,9 @@
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
   {{- partial "head.html" . -}}
   <body>
-    {{- partial "preloader.html" . -}}
+    {{ if .IsHome }}
+      {{- partial "preloader.html" . -}}
+    {{ end }}
     {{- partial "header.html" . -}}
     {{ if not .IsHome }} <div class="py-5 d-none d-lg-block"></div> {{ end }}
     {{- block "main" . }}
