--- a/layouts/index.html
+++ b/layouts/index.html
@@ -115,9 +115,14 @@
     >
       <div class="col-lg-6 p-lg-0">
         {{ if .website }}
-        <a href="{{ .website }}" target="_blank">
+        <a
+          href="{{ .website }}"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="{{ .name }}"
+        >
           {{ end }}
-          <img class="img-fluid" src="{{ .image | relURL }}" />
+          <img class="img-fluid" src="{{ .image | relURL }}" alt="{{ .name }}" />
           {{ if .website }}
         </a>
         {{ end }}
@@ -137,11 +142,17 @@
           href="{{ .website }}"
           class="btn btn-outline-primary mt-4 mr-2"
           target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Visit {{ .name }}"
         >
           Visit site
         </a>
         {{ end }} {{ if .project }}
-        <a href="{{ .project }}" class="btn btn-primary mt-4 ml-2 ml-lg-1">
+        <a
+          href="{{ .project }}"
+          class="btn btn-primary mt-4 ml-2 ml-lg-1"
+          aria-label="Learn more about {{ .name }}"
+        >
           Learn More
         </a>
         {{ end }}
