--- a/layouts/work/list.html
+++ b/layouts/work/list.html
@@ -2,12 +2,12 @@
 
 <section class="main section">
   <div class="container">
-    <h1 class="h2 text-black text-center text-sm-left pb-5 pt-0">
+    <h1 class="h2 text-black text-center text-lg-left pb-5 pt-0">
       Work Portfolio
     </h1>
 
     <div class="row">
-      <div class="col-sm-3 col-xs-12 pb-4">
+      <div class="col-lg-3 col-xs-12">
         <div
           class="nav nav-tab flex-row text-center text-sm-left mx-auto col-12 pr-0 pr-sm-2 justify-content-center"
           role="tablist"
@@ -15,8 +15,8 @@
         >
           {{ range $index, $elemen:= .Site.Data.work.projects }}
           <a
-            class="nav-link text-center text-sm-left col-4 col-sm-12 mx-auto 
-                mx-sm-2 mx-md-5 px-2 {{ if eq $index 0}} active {{ end }}"
+            class="nav-link text-center text-lg-left col-3 col-lg-12 mx-auto 
+                mx-lg-2 px-2 {{ if eq $index 0}} active {{ end }}"
             data-toggle="pill"
             href="#{{.title | urlize}}"
             role="tab"
@@ -26,8 +26,11 @@
           </a>
           {{ end }}
         </div>
+
+        <hr class="col-10 d-block d-lg-none my-4 pb-4" />
       </div>
-      <div class="col-9 col-xs-8 text-center mx-auto">
+
+      <div class="col-11 col-xs-8 col-lg-9 text-center mx-auto">
         <div class="tab-content">
           {{ range $index, $elemen:= .Site.Data.work.projects }}
           <div
@@ -56,7 +59,7 @@
                     <img
                       src="{{ .image | relURL }}"
                       alt="{{ .name | markdownify }}"
-                      class="card-img-top {{ if eq $index 1 }}w-50 pt-4 mx-auto{{ else }}shadow-sm{{ end }}"
+                      class="{{ if eq $index 1 }}w-50 pt-4 mx-auto{{ else }}w-100 shadow-sm{{ end }}"
                     />
                   {{ if or (isset . "link") (isset . "caseStudy") }}</a>{{ end }}
 
