feat(home): update resume link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
 
           <div class="banner-cta mx-0 mx-sm-4 mt-3">
             <a
-              href="/Joshua%20Booth%20Resume.pdf"
+              href="https://www.linkedin.com/in/joshua-booth/"
               class="btn btn-outline-primary mr-3"
               alt="Joshua Booth Resume"
               target="_blank"
