feat: change font to Albert Sans

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -44,7 +44,7 @@ h5,
 h6 {
   color: $text-color-dark;
   font-family: $primary-font;
-  font-weight: 600;
+  font-weight: 500 !important;
   line-height: 1.2;
 
   a {
