--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,5 +10,5 @@ $white: #fff;
 $light: #f8f8f8;
 
 // Font Variables
-$primary-font: "Muli", sans-serif;
+$primary-font: "Albert Sans", sans-serif;
 $icon-font: "themify";
