--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
           <h1 class="banner-title">
             {{ .Site.Params.banner.title | markdownify }}
           </h1>
-          <h2 class="h4 banner-subtitle">
+          <h2 class="h4 banner-subtitle font-weight-normal">
             {{ .Site.Params.banner.subTitle | markdownify }}
           </h2>
 
@@ -51,7 +51,7 @@
   <section class="text-center mx-auto pt-3 mt-4 px-3">
     <h2 class="mt-5">Hey <span class="wave">👋🏻</span> I'm Josh!</h2>
 
-    <h3 class="h4 mt-5">Here's what I'm skilled in</h3>
+    <h3 class="h4 font-weight-normal mt-5">Here's what I'm skilled in</h3>
 
     <div class="text-center mx-auto pt-0 px-3">
       <div class="card-deck mt-4">
@@ -79,7 +79,8 @@
           <div class="card-body">
             <h4 class="h5 card-title font-weight-bold">Frontend Development</h4>
             <p class="card-text col-12 col-sm-8 col-md-12 mx-auto px-0">
-              I develop web designs into fast, responsive websites and web applications.
+              I develop web designs into fast, responsive websites and web
+              applications.
             </p>
           </div>
         </div>
@@ -107,7 +108,11 @@
           aria-label="{{ .name }}"
         >
           {{ end }}
-          <img class="img-fluid" src="{{ .image | relURL }}" alt="{{ .name }}" />
+          <img
+            class="img-fluid"
+            src="{{ .image | relURL }}"
+            alt="{{ .name }}"
+          />
           {{ if .website }}
         </a>
         {{ end }}
