--- a/layouts/work/single.html
+++ b/layouts/work/single.html
@@ -12,7 +12,7 @@
             <h1 class="h2 text-black px-5 px-sm-0">
               {{ .Title | markdownify }}
             </h1>
-            <h2 class="h5 text-secondary px-5 px-sm-0">
+            <h2 class="h5 text-secondary font-weight-normal px-5 px-sm-0">
               {{ if .Params.role }}
                 {{ .Params.role | markdownify }}
               {{ else }}
