--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,7 +22,7 @@
 
   {{ "<!-- Preconnect/preload styles and fonts -->" | safeHTML }}
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700&display=swap">
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Albert Sans:300,400,600,700&display=swap">
   <link rel="preload" href="/plugins/themify-icons/fonts/themify.woff" as="font" type="font/woff2" crossorigin>
 
   {{ "<!-- Plugins -->" | safeHTML }}
